tests/golden/type_errors/field_compound_non_struct.cd
let x = 1;
x.value += 1;
